--- a/sources/style/main.styl
+++ b/sources/style/main.styl
@@ -18,8 +18,7 @@ body
 	left 0px
 	width 100%
 	height 100%
-	background gray;
-	//background linear-gradient(45deg, #b6cfab 0%,#8db594 18%,#52816a 49%,#4f7964 59%,#005700 100%)
+	background gray
 	transition opacity 3s linear
 
 	&_loaded
@@ -68,14 +67,13 @@ body
 		cursor auto !important
 
 	&__mail
-
-		& a
-			color white
-			text-decoration none
-
-	&__another-contact
 		display block
-		margin-left 75px
+		color white
+		text-decoration none
+
+	&__other-contact
+		display inline-block
+		margin-left 85px
 		font-weight normal
 		text-decoration underline
 		font-size 15
@@ -126,13 +124,36 @@ body
 		font-family Roboto
 		font-size 14px
 		border none
+		outline none
 		background-color white
 		color white
 		background-color #87ccc3
 		padding 3px
 
 		&:hover
-			background-color #87ccc3
+			background-color #63bdb1
+
+		&:active
+			position relative
+			top 1px
+
+.additionalContacts
+	display inline-block
+	position relative
+	width 150px
+	height 70px
+	border 2px solid #63bdb1
+	background-color white
+	top -165px
+	left 60px
+
+	&__list
+		display block
+		margin 0
+		padding 0
+
+	&__item
+		list-style-type none
 
 .info-block
 	margin-left 35px
